# Guildly

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: commands.rs  database.rs  lib.rs  main.rs
src/commands/: add.rs  remove.rs  search.rs  show_menu.rs
