[package]
name = "guildly"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
duckdb = { version = "1.3.2", features = ["bundled"] }
linkify = "0.10.0"
serde = "1.0.219"
serde_json = "1.0.143"
serenity = "0.12.4"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"
